Fix seed pictures, item view column spacing

--- a/client/src/Components/Items/Form.css
+++ b/client/src/Components/Items/Form.css
@@ -155,8 +155,8 @@
 
 .item-view-values {
   text-align: center;
-  width: 15%;
-  padding-left: 50px
+  width: 35%;
+  padding-left: 35px
 }
 
 .item-view-details {
